--- a/app/src/main/res/layout/activity_parlez_vous.xml
+++ b/app/src/main/res/layout/activity_parlez_vous.xml
@@ -77,6 +77,15 @@
                 android:layout_gravity="center_horizontal"
                 android:visibility="invisible"
                 android:indeterminate="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text=""
+                android:id="@+id/textViewUrl"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
         </LinearLayout>
 
     </ScrollView>
